# ml-fraud-service

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: inference.Dockerfile  training.Dockerfile
src/: __init__.py
src/common/: config.py  logging.py
src/database/: __init__.py  db.py
src/inference/: __init__.py  api.py  main.py  predictor.py  schemas.py
src/preprocessing/: __init__.py  features.py  pipeline.py
src/registry/: registry.py
src/training/: __init__.py  main.py  trainer.py  validator.py
tests/e2e/: test_full_cycle.py
tests/unit/: test_api.py  test_inference.py  test_training.py
